fix spacing for google logo, search bar, and add hover features

--- a/styles/style.css
+++ b/styles/style.css
@@ -6,14 +6,14 @@ ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
-    font-size: 12pt;
+    font-size: 11pt;
 }
 
 #TopNavBar {
     margin: 20px;
     display: grid;
-    grid-template-columns: 5% auto 5% 5% 5% 5% ;
-   
+    grid-template-columns: 60px auto 60px 70px 50px 20px;
+    color: black;
 }
 
 a {
@@ -28,15 +28,69 @@ a:hover {
     text-decoration: underline;
 }
 
+#french-link {
+    color: #1a0dab;
+}
+
 .main-search-box {
-    margin: auto;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 250px;
+    margin-bottom: 560px;
     width: 50%;
-    padding: 12em 0 54em 55em;
+    text-align: center;
+}
+
+button {
+    border: 1px solid #f8f9fa;
+    border-radius: 4px;
+    font-size: 14px;
+    font-family: Arial, sans-serif;
+    margin: 11px 4px;
+    padding: 0 16px;
+    line-height: 27px;
+    height: 36px;
+    min-width: 54px;
+}
+
+button:hover {
+    box-shadow: 0 1px 1px rgb(0 0 0 / 10%);
+    background-color: #f8f9fa;
+    border: 1px solid #dadce0;
+    color: #202124;
+}
+
+p {
+font-size: 16px;
+}
+
+.round-input-text {
+    border: 1px solid #d6d4d4;
+    border-radius: 25px;
+    width: 582px;
+    height: 40px;
+    align-self: center;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    Margin-top: 25px;
+}
+
+.round-input-text:hover {
+    background-color: #fff;
+    box-shadow: 0 1px 6px rgb(32 33 36 / 28%);
+    border-color: rgba(223, 225, 229, 0);
 }
 
 #footer {
-    margin: 20px;
+    margin-left: -10px;
+    margin-right: -7px;
+    padding: 20px;
+    background-color: #f0f0f0;
+    color: #70757a;
     display: grid;
-    grid-template-columns: 8% 6% auto 5% 5% 5% ;
+    grid-template-columns: 100px 90px auto 70px 60px 60px ;
 }
+
 
